# genie-rs

./: .gitignore  Cargo.toml
genie/docs/: readme.md
src/: config.rs  main.rs
